--- a/index.html
+++ b/index.html
@@ -1064,35 +1064,6 @@ thead th, tbody td{ padding:.55rem .55rem; }
       if(menu){ menu.classList.remove('open'); menu.setAttribute('aria-hidden','true'); }
     }
 
-     // Tabs: ensure correct visibility each time
-  document.querySelectorAll('#group-panel .section-tabs .seg').forEach(seg=>{
-    seg.addEventListener('click', ()=>{
-      const wrap = seg.parentElement;
-      wrap.querySelectorAll('.seg').forEach(s=>s.classList.remove('active'));
-      seg.classList.add('active');
-  
-      const showTable = seg.getAttribute('data-view') === 'table';
-  
-      // Toggle Matches vs Table content
-      document.getElementById('g-standings').style.display = showTable ? '' : 'none';
-      document.querySelector('.matches-wrap').style.display = showTable ? 'none' : '';
-
-      // Toggle the Table footnote
-      const tblFoot = document.getElementById('table-footnote');
-      if (tblFoot) tblFoot.style.display = showTable ? '' : 'none';
-      
-      // Hide/show the Matches-only filter controls
-      const matchesControls = document.getElementById('controls-matches');
-      if (matchesControls) matchesControls.style.display = showTable ? 'none' : '';
-  
-      // Optional: reset filter to "All" when leaving Matches
-      if (showTable) {
-        const sel = document.getElementById('status');
-        if (sel) sel.value = '';
-      }
-    });
-  });
-
 
     // View tab switching closes dropdown
     document.querySelectorAll('.view-tabs .vt').forEach(seg=>{
@@ -1142,7 +1113,7 @@ thead th, tbody td{ padding:.55rem .55rem; }
 
     // Blur selects on Android to close pickers
     (function(){
-      ['team','status','date-jump'].forEach(id=>{
+      ['team','status','date'].forEach(id=>{
         const el=document.getElementById(id);
         if(el){ el.addEventListener('change',()=>el.blur()); }
       });
@@ -1160,17 +1131,19 @@ thead th, tbody td{ padding:.55rem .55rem; }
         const teamSel = document.getElementById('team');
         const teamText = teamSel ? teamSel.options[teamSel.selectedIndex]?.text || '' : '';
 
-        const dateInput = document.getElementById('date-jump');
-        const dateText = dateInput && dateInput.value ? dateInput.value : '';
+        const dateSel  = document.getElementById('date');
+        const dateText = dateSel && dateSel.value ? dateSel.value : '';
 
         const teamVisible = getComputedStyle(document.getElementById('by-team')).display !== 'none';
         const dateVisible = getComputedStyle(document.getElementById('by-date')).display !== 'none';
 
         if (teamVisible && teamText) return { msg: `Limerick GAA Hub — ${teamText} (${statusText})` };
-        if (dateVisible) {
-          const niceDate = dateText ? new Date(dateText+'T00:00:00').toDateString() : 'Selected date';
-          return { msg: `Limerick GAA Hub — By date: ${niceDate} (${statusText})` };
-        }
+       + if (dateVisible) {
+         const niceDate = dateText
+           ? new Date(dateText + 'T00:00:00').toLocaleDateString(undefined, { weekday:'short', year:'numeric', month:'short', day:'numeric' })
+           : 'Selected date';
+         return { msg: `Limerick GAA Hub — By date: ${niceDate} (${statusText})` };
+      }
         const viewLabel = compView === 'table' ? 'Table' : 'Matches';
         return { msg: `Limerick GAA Hub — ${compName}: ${viewLabel} (${statusText})` };
       }
