--- a/index.html
+++ b/index.html
@@ -273,18 +273,13 @@ td.match, th.match{ text-align:center; }
 }
 #modal-standings td:not(:first-child), #modal-standings th:not(:first-child){ text-align:right; }
 #modal-standings tbody td:not(:first-child){ font-variant-numeric:tabular-nums; }
-
-/* Only allow horizontal scroll on very narrow screens */
-@media (max-width: 480px){
-  .modal .table-wrap{ overflow-x:auto; }
-}
   
 /* Controls lighter */
 .controls.card{ box-shadow:none; border-radius:12px; border:1px solid var(--line); }
 
 /* Give Team more space in both compact and expanded tables */
 #g-standings-table{ table-layout:fixed; width:100%; }
-#modal-standings{ table-layout:auto;  width:100%; }
+#modal-standings{ table-layout:fixed;  width:100%; }
 /* compact table (keep as-is) */
 #g-standings-table th:first-child, #g-standings-table td:first-child{
   width:52%;
@@ -293,7 +288,7 @@ td.match, th.match{ text-align:center; }
 
 /* expanded modal table (a bit narrower for Team to free space for numbers) */
 #modal-standings th:first-child, #modal-standings td:first-child{
-  width:46%;
+  width:65%;
   white-space:normal; word-break:normal; overflow-wrap:anywhere;
 }
 #g-standings-table th:not(:first-child), #g-standings-table td:not(:first-child),
@@ -302,6 +297,12 @@ td.match, th.match{ text-align:center; }
   min-width:2.4rem;
 }
 
+/* Keep numeric columns tight in the modal so Team stays wide */
+#modal-standings th:not(:first-child),
+#modal-standings td:not(:first-child){
+  min-width:2.4rem;
+  white-space:nowrap;
+}
 
 /* Mobile niceties */
 @supports(padding:max(0px)){
