--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@ td.match, th.match{ text-align:center; }
 
 /* expanded modal table (a bit narrower for Team to free space for numbers) */
 #modal-standings th:first-child, #modal-standings td:first-child{
-  width:65%;
+  width:60%;
   white-space:normal; word-break:normal; overflow-wrap:anywhere;
 }
 #g-standings-table th:not(:first-child), #g-standings-table td:not(:first-child),
@@ -297,12 +297,16 @@ td.match, th.match{ text-align:center; }
   min-width:2.4rem;
 }
 
-/* Keep numeric columns tight in the modal so Team stays wide */
-#modal-standings th:not(:first-child),
-#modal-standings td:not(:first-child){
-  min-width:2.4rem;
-  white-space:nowrap;
-}
+/* Modal numeric columns — give each a sensible width */
+#modal-standings th:nth-child(2), #modal-standings td:nth-child(2){ min-width:3.2rem; white-space:nowrap; } /* P */
+#modal-standings th:nth-child(3), #modal-standings td:nth-child(3){ min-width:3.2rem; white-space:nowrap; } /* W */
+#modal-standings th:nth-child(4), #modal-standings td:nth-child(4){ min-width:3.2rem; white-space:nowrap; } /* D */
+#modal-standings th:nth-child(5), #modal-standings td:nth-child(5){ min-width:3.2rem; white-space:nowrap; } /* L */
+#modal-standings th:nth-child(6), #modal-standings td:nth-child(6){ min-width:4.2rem; white-space:nowrap; } /* PF */
+#modal-standings th:nth-child(7), #modal-standings td:nth-child(7){ min-width:4.2rem; white-space:nowrap; } /* PA */
+#modal-standings th:nth-child(8), #modal-standings td:nth-child(8){ min-width:4.2rem; white-space:nowrap; } /* Diff */
+#modal-standings th:nth-child(9), #modal-standings td:nth-child(9){ min-width:3.6rem; white-space:nowrap; } /* Pts */
+
 
 /* Mobile niceties */
 @supports(padding:max(0px)){
