--- a/index.html
+++ b/index.html
@@ -1036,7 +1036,7 @@ thead th, tbody td{ padding:.55rem .55rem; }
             <th>Team</th><th class="right">P</th><th class="right">W</th>
             <th class="right">D</th><th class="right">L</th>
             <th class="right">PF</th><th class="right">PA</th>
-            <th class="right">Diff</th><th class="right">Pts</th>
+            <th class="right">PD</th><th class="right">Pts</th>
           </tr>
         </thead>
         <tbody></tbody>
